--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="logo.png" alt="ImpeccableWolf Logo">
+                <img src="Logo.png" alt="ImpeccableWolf Logo">
             </div>
             <nav>
                 <ul>
