--- a/index.html
+++ b/index.html
@@ -11,48 +11,58 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="Logo.png" alt="ImpeccableWolf Logo">
+                <img src="logo.png" alt="ImpeccableWolf Logo">
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#features">Features</a></li>
-                    <li><a href="#videos">Videos</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="cta">
-                <a href="#upload" class="btn">Upload Video</a>
+            <div class="search-bar">
+                <input type="text" placeholder="Search">
+                <button type="submit">Search</button>
+            </div>
+            <div class="user-profile">
+                <a href="#login">Login</a>
             </div>
         </div>
     </header>
 
-    <!-- Main Content Section -->
-    <section id="home">
-        <div class="hero">
-            <h1>Welcome to ImpeccableWolf</h1>
-            <p>Your ultimate streaming and video upload platform</p>
-            <a href="#videos" class="btn-primary">Watch Now</a>
-        </div>
-    </section>
+    <!-- Sidebar Navigation -->
+    <aside class="sidebar">
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#trending">Trending</a></li>
+                <li><a href="#subscriptions">Subscriptions</a></li>
+                <li><a href="#library">Library</a></li>
+            </ul>
+        </nav>
+    </aside>
 
-    <!-- Video Grid Section -->
-    <section id="videos">
+    <!-- Main Content Area -->
+    <main>
         <div class="container">
-            <h2>Featured Videos</h2>
-            <div class="video-grid">
-                <div class="video-card">
-                    <img src="video-thumbnail1.jpg" alt="Video Title 1">
-                    <h3>Video Title 1</h3>
+            <!-- Featured Video Section -->
+            <section class="featured-video">
+                <div class="video-player">
+                    <img src="featured-video-thumbnail.jpg" alt="Featured Video">
+                    <h2>Featured Video Title</h2>
                 </div>
-                <div class="video-card">
-                    <img src="video-thumbnail2.jpg" alt="Video Title 2">
-                    <h3>Video Title 2</h3>
+            </section>
+
+            <!-- Video Grid Section -->
+            <section id="videos">
+                <h2>Recommended Videos</h2>
+                <div class="video-grid">
+                    <div class="video-card">
+                        <img src="video-thumbnail1.jpg" alt="Video Title 1">
+                        <h3>Video Title 1</h3>
+                    </div>
+                    <div class="video-card">
+                        <img src="video-thumbnail2.jpg" alt="Video Title 2">
+                        <h3>Video Title 2</h3>
+                    </div>
+                    <!-- Add more video cards as needed -->
                 </div>
-                <!-- More video cards -->
-            </div>
+            </section>
         </div>
-    </section>
+    </main>
 
     <!-- Footer Section -->
     <footer>
