--- a/index.html
+++ b/index.html
@@ -3,77 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ImpeccableWolf - Stream & Upload Videos</title>
-    <link rel="stylesheet" href="style.css">
+    <title>ImpeccableWolf</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header Section -->
     <header>
-        <div class="container">
-            <div class="logo">
-                <img src="logo.png" alt="ImpeccableWolf Logo">
-            </div>
-            <div class="search-bar">
-                <input type="text" placeholder="Search">
-                <button type="submit">Search</button>
-            </div>
-            <div class="user-profile">
-                <a href="#login">Login</a>
-            </div>
-        </div>
+        <h1>ImpeccableWolf</h1>
     </header>
 
-    <!-- Sidebar Navigation -->
-    <aside class="sidebar">
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#trending">Trending</a></li>
-                <li><a href="#subscriptions">Subscriptions</a></li>
-                <li><a href="#library">Library</a></li>
-            </ul>
-        </nav>
-    </aside>
-
-    <!-- Main Content Area -->
     <main>
-        <div class="container">
-            <!-- Featured Video Section -->
-            <section class="featured-video">
-                <div class="video-player">
-                    <img src="featured-video-thumbnail.jpg" alt="Featured Video">
-                    <h2>Featured Video Title</h2>
-                </div>
-            </section>
-
-            <!-- Video Grid Section -->
-            <section id="videos">
-                <h2>Recommended Videos</h2>
-                <div class="video-grid">
-                    <div class="video-card">
-                        <img src="video-thumbnail1.jpg" alt="Video Title 1">
-                        <h3>Video Title 1</h3>
-                    </div>
-                    <div class="video-card">
-                        <img src="video-thumbnail2.jpg" alt="Video Title 2">
-                        <h3>Video Title 2</h3>
-                    </div>
-                    <!-- Add more video cards as needed -->
-                </div>
-            </section>
+        <div class="video-grid">
+            <a href="video.html?video=sample-video.mp4">
+                <img src="https://via.placeholder.com/150" alt="Sample Video">
+                <p>Sample Video</p>
+            </a>
+            <!-- Add more video links here -->
         </div>
     </main>
 
-    <!-- Footer Section -->
     <footer>
-        <div class="container">
-            <p>&copy; 2024 ImpeccableWolf. All rights reserved.</p>
-            <div class="socials">
-                <a href="#facebook"><img src="facebook-icon.png" alt="Facebook"></a>
-                <a href="#twitter"><img src="twitter-icon.png" alt="Twitter"></a>
-                <a href="#instagram"><img src="instagram-icon.png" alt="Instagram"></a>
-            </div>
-        </div>
+        <p>&copy; 2024 ImpeccableWolf</p>
     </footer>
 </body>
 </html>
