--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
 </head>
 <body>
     <header>
-        <h1>ImpeccableWolf</h1>
+        <div class="logo">
+            <h1>ImpeccableWolf</h1>
+        </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Search...">
+        </div>
+        <div class="login">
+            <button>Login</button>
+        </div>
     </header>
 
     <main>
-        <div class="video-grid">
-            <a href="video.html?video=sample-video.mp4">
-                <img src="https://via.placeholder.com/150" alt="Sample Video">
-                <p>Sample Video</p>
-            </a>
-            <!-- Add more video links here -->
-        </div>
+        <!-- Video Content Goes Here -->
     </main>
 
     <footer>
-        <p>&copy; 2024 ImpeccableWolf</p>
+        <p>&copy; 2024 ImpeccableWolf. All rights reserved.</p>
     </footer>
 </body>
 </html>
